# crewai_email

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/customer_mail_handling/: crew.py  logger.py  main.py  models.py  non.py  streamlit_callback.py
src/customer_mail_handling/__pycache__/: streamlit_callback.cpython-311.pyc.2231773637616  streamlit_callback.cpython-311.pyc.2293560472592
src/customer_mail_handling/config/: agents.yaml  tasks.yaml
src/customer_mail_handling/tools/: date_tools.py  gmail_tools.py  gmail_tools_subject_changes.py
