[project]
name = "Email_Handling_crewai"
version = "0.1.0"
description = "gmail-crew-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.40.13",
    "bs4>=0.0.2",
    "crewai[tools]>=0.102.0,<1.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]

[project.scripts]
gmail_crew_ai = "customer_mail_handling.main:run"
run_crew = "customer_mail_handling.main:run"
train = "customer_mail_handling.main:train"
replay = "customer_mail_handling.main:replay"
test = "customer_mail_handling.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_mail_handling"]

[tool.crewai]
type = "crew"
